new domain names in meta tags

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <title>Switch</title>
   <meta property='og:title' content='Switch'>
   <meta property='og:description' content='On and Off Switch'>
-  <meta property='og:image' content='http://off-switch.epizy.com/icon512.jpg'>
-  <meta property='og:url' content='http://off-switch.epizy.com/'>
+  <meta property='og:image' content='https://off2a7.fun/icon512.jpg'>
+  <meta property='og:url' content='https://off2a7.fun/'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
   <meta name='twitter:card' content='summary'>
-  <meta name='twitter:url' content='http://off-switch.epizy.com/'>
+  <meta name='twitter:url' content='https://off2a7.fun/'>
   <meta name='twitter:title' content='Switch'>
   <meta name='twitter:description' content='On and Off Switch'>
-  <meta name="twitter:image" content="http://off-switch.epizy.com/icon512.jpg" />
+  <meta name="twitter:image" content="https://off2a7.fun/icon512.jpg" />
   <link rel='manifest' href='manifest.json'>
   <style>
     * {
