Added theme color

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <link rel="shortcut icon" type="image/jpg" href="icon.jpg" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Switch</title>
@@ -16,7 +16,8 @@
   <meta name='twitter:url' content='https://off2a7.fun/'>
   <meta name='twitter:title' content='Switch'>
   <meta name='twitter:description' content='On and Off Switch'>
-  <meta name="twitter:image" content="https://off2a7.fun/icon512.jpg" />
+  <meta name="twitter:image" content="https://off2a7.fun/icon512.jpg">
+  <meta name="theme-color" content="#ffffff">
   <link rel='manifest' href='manifest.json'>
   <style>
     * {
