--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
   <meta name="twitter:image" content="https://off2a7.fun/icon512.jpg">
   <meta name="theme-color" content="#ffffff">
   <link rel='manifest' href='manifest.json'>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-7157858483914251",
+      enable_page_level_ads: true
+    });
+  </script>
   <style>
     * {
       margin: 0;
@@ -174,9 +181,9 @@
       for (let i = 0; i < count; i++) {
         str = "0" + str;
       }
-      window.requestAnimationFrame(()=>{
+      window.requestAnimationFrame(() => {
         span.innerText = str;
-        window.requestAnimationFrame(()=>{
+        window.requestAnimationFrame(() => {
           span.style.opacity = 1;
         })
       })
